protocols/tests/adders/adder_d0/illegal_assignment.out
error: Cannot perform ASSIGNED FORBIDDEN PORT on DontCare value in Cannot assign to input 'a' after observing a dependent output
   ┌─ adders/adder_d0/add_d0.prot:31:14
   │
31 │     DUT.a := a; // this should be illegal
   │              ^ Cannot perform ASSIGNED FORBIDDEN PORT on DontCare value in Cannot assign to input 'a' after observing a dependent output

